// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon should match snapshot default 1`] = `
<body>
  <div>
    <svg
      class="svelte-1xikh0r"
    >
      <use
        xlink:href="#icon_name"
      />
    </svg>
  </div>
</body>
`;

exports[`Icon should match snapshot props 1`] = `
<body>
  <div>
    <svg
      class="_tadashi_svelte_icon___vars svelte-1xikh0r"
      style="--tadashi_svelte_icon_fill: green;--tadashi_svelte_icon_width: 30px"
    >
      <use
        xlink:href="#icon_name"
      />
    </svg>
  </div>
</body>
`;
